--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -24,6 +23,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "axios": "^0.21",
+        "vue-axios": "^3.4.1",
         "vue-router": "^3.1.3"
     }
 }
